# livelyrec

./: .gitignore  LICENSE  LivelyRec.spec  README.md  _config.yml  pyproject.toml  requirements-dev.txt  requirements-light.txt  requirements.txt
.github/workflows/: ci.yml  pages.yml  release.yml
browser_source/: app.js  common.js  index.html  style.css
browser_source/keycount/: app.js  index.html  style.css
browser_source/now_playing/: app.js  index.html  style.css
browser_source/now_playing_history/: app.js  index.html  style.css
browser_source/recent/: app.js  index.html  style.css
data/: README.md  banner_features.json  levels.sample.csv  master.json
docs/: _config.yml  broadcast.md  index.md  installation.md  usage.md
docs/design/: 00_要件.md  01_プロジェクト計画書.md  02_要件定義書.md  03_用語集.md  04_リスク・課題管理表.md  05_基本設計書.md  06_詳細設計_アーキテクチャ.md  07_詳細設計_DB設計.md  08_詳細設計_API設計.md  09_詳細設計_UI設計.md  10_詳細設計_画像認識.md  11_単体テスト計画書.md  11_詳細設計_バナー認識.md  12_単体テスト報告書.md  13_結合テスト計画書.md  14_結合テスト報告書.md  15_システムテスト計画書.md  16_システムテスト報告書.md  17_受入テスト計画書.md  18_受入テスト報告書.md  システムテスト手順書.md  結合テスト手順書.md
livelyrec/: __init__.py  app.py
livelyrec/application/: analysis_service.py  banner_match_service.py  export_service.py  master_service.py  recording_service.py  update_service.py
poc/: ground_truth.yaml  run_digit_recognition.py  run_paddleocr.py  run_paddleocr_roi.py
scripts/: analyze_screen_signatures.py  build_banner_master.py  build_digit_templates.py  build_digit_templates_from_gt.py  build_master.py  build_screen_signatures.py  diagnose_bad_clipping.py  diagnose_bottom_right.py  diagnose_recognition.py  rebuild_digit_templates.py  system_test_replay.py  verify_screen_signature.py  visualize_roi.py
templates/: README.md  screen_signatures.npz
tests/: test_app_diagnostics.py  test_app_seed_reload.py  test_layer_dependencies.py  test_smoke_out_of_scope.py
(+107 files in other folders)
